Fix: Sidebar dark mode refactor

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -103,11 +103,20 @@ $bg-color: #f1f3f5;
         }
       }
     }
+    .icon-bg {
+      &:hover {
+        background: #222;
+      }
+    }
 
     .search-input {
       background: #dee2e6;
       outline: none;
       border-radius: 5px;
+    }
+
+    .search-icon {
+      background: #222;
     }
 
     .arrow-open {
@@ -142,6 +151,11 @@ $bg-color: #f1f3f5;
       padding-left: 15px;
       font-size: 16px;
       font-weight: 500;
+    }
+  }
+  .icon-bg {
+    &:hover {
+      background: #222;
     }
   }
 }
@@ -207,7 +221,12 @@ $bg-color: #f1f3f5;
         color: black;
       }
       .mobile-color {
-        color: #fff;
+        color: whitesmoke;
+      }
+    }
+    .icon-bg {
+      &:hover {
+        background: #222;
       }
     }
   }
@@ -237,6 +256,15 @@ $bg-color: #f1f3f5;
       font-family: Poppins, sans-serif;
       font-weight: 700;
       font-size: 17px;
+    }
+
+    .mobile-color {
+      color: #fff;
+    }
+  }
+  .icon-bg {
+    &:hover {
+      background: #222;
     }
   }
 }
